--- a/index.html
+++ b/index.html
@@ -23,10 +23,48 @@
   </head>
   <body>
     <nav class="navbar">
-        <div class="container">
-            
+      <div class="container">
+        <div class="logo">
+          <a href="index.html">
+            <img src="images/logo.png" alt="logo" />
+          </a>
         </div>
+        <div class="main-menu">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a class="btn" href="#">Button</a></li>
+            <i class="fas fa-user">Log In</i>
+          </ul>
+        </div>
+      </div>
     </nav>
+
+    <!-- hero -->
+
+    <section class="hero">
+      <div class="container">
+        <div class="hero-content">
+          <h1 class="hero-heading text-xxl">
+            A powerful solution to grow your startup. Fast!
+          </h1>
+          <p class="hero-text">
+            Organize, collaborate, and track progress seamlessly with our
+            one-stop-shop startup growth tool.
+          </p>
+          <div class="hero-buttons">
+            <a href="#" class="btn btn-primary">Get Started</a>
+          </div>
+          <div class="hero-buttons">
+            <a href="#" class="btn"
+              ><i class="fas fa-laptop"></i> Book a Demo</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="js/main.js"></script>
   </body>
 </html>
