beginning of faq

--- a/index.html
+++ b/index.html
@@ -65,6 +65,106 @@
       </div>
     </section>
 
+    <!-- video section -->
+
+    <section class="video bg-black">
+      <div class="container-sm">
+        <h2 class="video-heading text-xl text-center">
+          See how it works and get started in less than 2-minutes.
+        </h2>
+        <div class="video-content">
+          <a href="#">
+            <img src="images/video-preview.png" alt="" class="video-preview" />
+          </a>
+          <a href="#" class="btn btn-primary"> Get Started </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- testimonials -->
+    <section class="testimonials bg-dark">
+      <div class="container">
+        <h3 class="testimonials-heading text-xl">
+          Don't just take our word for it, see the success story.
+        </h3>
+        <div class="testimonials-grid">
+          <div class="card">
+            <p>Really good stuff here. Try Growth App!</p>
+            <p>Catherine Smith</p>
+            <p>Capdoopera</p>
+          </div>
+          <div class="card">
+            <p>Really good stuff here. Try Growth App!</p>
+            <p>Catherine Smith</p>
+            <p>Capdoopera</p>
+          </div>
+          <div class="card">
+            <p>Really good stuff here. Try Growth App!</p>
+            <p>Catherine Smith</p>
+            <p>Capdoopera</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- pricing -->
+
+    <section class="pricing">
+      <div class="container-sm">
+        <h3 class="pricing-heading text-xl text-center">Pricing</h3>
+        <p class="pricing-subheading text-md text-center">
+          Start free and scale while you grow. No hidden fees.
+        </p>
+        <div class="pricing-grid">
+          <!-- pricing card 1 -->
+          <div class="card bg-light">
+            <div class="pricing-card-header">
+              <h4 class="pricing-heading text-xl">simple</h4>
+              <p class="pricing-card-subheading">
+                Keep track of your contacts and gain valuable insights.
+              </p>
+              <p class="pricing-card-price">
+                <span class="text-xl"> Free </span>
+                no credit card needed
+              </p>
+            </div>
+            <div class="pricing-card-body">
+              <ul>
+                <li>
+                  <i class="fa fa-check">Real Time Monitoring</i>
+                </li>
+              </ul>
+              <a href="#" class="btn btn-primary btn-block">Get Started</a>
+            </div>
+          </div>
+
+          <!-- pricing card 2 -->
+          <div class="card bg-black">
+            <div class="pricing-card-header">
+              <h4 class="pricing-heading text-xl">simple</h4>
+              <p class="pricing-card-subheading">
+                Keep track of your contacts and gain valuable insights.
+              </p>
+              <p class="pricing-card-price">
+                <span class="text-xl"> Free </span>
+                no credit card needed
+              </p>
+            </div>
+            <div class="pricing-card-body">
+              <ul>
+                <li>
+                  <i class="fa fa-check">Real Time Monitoring</i>
+                </li>
+              </ul>
+              <a href="#" class="btn btn-primary btn-block">Get Started</a>
+            </div>
+          </div>
+        </div>
+        <p class="pricing-footer text-center">
+          All prices are in us dollars and charged per month.
+        </p>
+      </div>
+    </section>
+
     <script src="js/main.js"></script>
   </body>
 </html>
