--- a/index.html
+++ b/index.html
@@ -35,11 +35,102 @@
             <li><a href="#">About Us</a></li>
             <li><a href="#">Blog</a></li>
             <li><a class="btn" href="#">Button</a></li>
-            <i class="fas fa-user">Log In</i>
+            <li>
+              <a href="#"><i class="fas fa-user">Log In</i></a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
+
+    <!-- faq -->
+    <section class="faq bg-light">
+      <div class="container-sm">
+        <h3 class="text-xl text-center">Frequently Asked Questions</h3>
+        <ul class="faq-menu">
+          <li class="active">All</li>
+          <li>Getting Started</li>
+          <li>Pricing</li>
+        </ul>
+        <div class="faq-content">
+          <div class="faq-group">
+            <div class="faq-group-header">
+              <h4 class="text-md">
+                How does the contact management feature track clients and
+                partners?
+              </h4>
+              <i class="fa fa-minus" aria-hidden="true"></i>
+            </div>
+            <div class="faq-group-body open">
+              <p>
+                Keep track of your clients, gain valuable insights, analyse live
+                data and performance metrics.
+              </p>
+            </div>
+          </div>
+          <div class="faq-group">
+            <div class="faq-group-header">
+              <h4 class="text-md">
+                How does the contact management feature track clients and
+                partners?
+              </h4>
+              <i class="fa fa-plus" aria-hidden="true"></i>
+            </div>
+            <div class="faq-group-body">
+              <p>
+                Keep track of your clients, gain valuable insights, analyse live
+                data and performance metrics.
+              </p>
+            </div>
+          </div>
+          <div class="faq-group">
+            <div class="faq-group-header">
+              <h4 class="text-md">
+                How does the contact management feature track clients and
+                partners?
+              </h4>
+              <i class="fa fa-plus" aria-hidden="true"></i>
+            </div>
+            <div class="faq-group-body">
+              <p>
+                Keep track of your clients, gain valuable insights, analyse live
+                data and performance metrics.
+              </p>
+            </div>
+          </div>
+          <div class="faq-group">
+            <div class="faq-group-header">
+              <h4 class="text-md">
+                How does the contact management feature track clients and
+                partners?
+              </h4>
+              <i class="fa fa-plus" aria-hidden="true"></i>
+            </div>
+            <div class="faq-group-body">
+              <p>
+                Keep track of your clients, gain valuable insights, analyse live
+                data and performance metrics.
+              </p>
+            </div>
+          </div>
+          <div class="faq-group">
+            <div class="faq-group-header">
+              <h4 class="text-md">
+                How does the contact management feature track clients and
+                partners?
+              </h4>
+              <i class="fa fa-plus" aria-hidden="true"></i>
+            </div>
+            <div class="faq-group-body">
+              <p>
+                Keep track of your clients, gain valuable insights, analyse live
+                data and performance metrics.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- hero -->
 
