--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </ul>
         </div>
         <!-- hamburger button -->
-        <button id="hamburger-button" class="hamburger-button">
+        <button class="hamburger-button">
           <div class="hamburger-line"></div>
           <div class="hamburger-line"></div>
           <div class="hamburger-line"></div>
